<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:scaleType="center"-->
<!--            android:src="@drawable/person"-->
<!--            ></ImageView>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding">
        <!-- поле результата -->
        <!-- поле знака операции -->
        <!-- поле ввода чисел -->
        <com.google.android.material.button.MaterialButton
            android:onClick="ChooseTheme"
            android:text="@string/choose_theme"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/operationField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_50"
            android:textSize="@dimen/textSize"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/resultField"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_50"
            android:textSize="@dimen/textSize"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/operationField"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/numberField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:inputType="number"
            android:textSize="@dimen/largeTextSize"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultField" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:columnCount="4"
        android:orientation="horizontal"
        android:useDefaultMargins="true">

        <com.google.android.material.button.MaterialButton
            android:onClick="onNumberClick"
            android:text="@string/key_7" />

        <com.google.android.material.button.MaterialButton
            android:onClick="onNumberClick"
            android:text="@string/key_8" />

        <com.google.android.material.button.MaterialButton
            android:onClick="onNumberClick"
            android:text="@string/key_9" />

        <com.google.android.material.button.MaterialButton
            android:onClick="onOperationClick"
            android:text="@string/key_division" />

        <com.google.android.material.button.MaterialButton
            android:onClick="onNumberClick"
            android:text="@string/key_4" />

        <com.google.android.material.button.MaterialButton
            android:onClick="onNumberClick"
            android:text="@string/key_5" />

        <com.google.android.material.button.MaterialButton
            android:onClick="onNumberClick"
            android:text="@string/key_6" />

        <com.google.android.material.button.MaterialButton
            android:onClick="onOperationClick"
            android:text="@string/key_multiplication" />

        <com.google.android.material.button.MaterialButton
            android:onClick="onNumberClick"
            android:text="@string/key_1" />

        <com.google.android.material.button.MaterialButton
            android:onClick="onNumberClick"
            android:text="@string/key_2" />

        <com.google.android.material.button.MaterialButton
            android:onClick="onNumberClick"
            android:text="@string/key_3" />

        <com.google.android.material.button.MaterialButton
            android:onClick="onOperationClick"
            android:text="@string/key_minus" />

        <com.google.android.material.button.MaterialButton
            android:onClick="onNumberClick"
            android:text="@string/key_0" />

        <com.google.android.material.button.MaterialButton
            android:onClick="onNumberClick"
            android:text="@string/key_comma" />

        <com.google.android.material.button.MaterialButton
            android:onClick="onOperationClick"
            android:text="@string/key_plus" />

        <com.google.android.material.button.MaterialButton
            android:onClick="onOperationClick"
            android:text="@string/key_exactly" />

    </GridLayout>
</FrameLayout>